# kkutu-grpc

./: .gitignore  build.gradle.kts  gradle.properties  readme.md  settings.gradle.kts  vcvars.bat
AuthServer/: build.gradle.kts  inc.env
AuthServer/data/: sample_db.mv.db  sample_db.trace.db
AuthServer/src/main/kotlin/space/mori/kkutukotlin/authserver/: CustomOAuth2UserService.kt  Main.kt  OAuth2Attribute.kt  SecurityConfig.kt  WebConfig.kt
AuthServer/src/main/kotlin/space/mori/kkutukotlin/authserver/authhandler/: JwtAuthenticationSuccessHandler.kt
AuthServer/src/main/kotlin/space/mori/kkutukotlin/authserver/controller/: HealthControler.kt  HomeControler.kt  UserInfoController.kt
AuthServer/src/main/kotlin/space/mori/kkutukotlin/authserver/database/: main.kt  user.kt
AuthServer/src/main/resources/: application-jwt.yml  application.yml
Backend/: build.gradle.kts
Backend/src/main/kotlin/space/mori/kkutukotlin/backend/: DocService.kt  Main.kt
Backend/src/main/kotlin/space/mori/onlinejudge/backend/: DocService.kt  Main.kt
Backend/src/main/resources/: logback.xml
Frontend/: build.gradle.kts
Frontend/src/: nuxt.config.ts  package-lock.json  package.json
Frontend/src/assets/js/: test_grpc_pb.d.ts  test_grpc_pb.js  test_pb.d.ts  test_pb.js
Frontend/src/components/: Seprator.vue
Frontend/src/layouts/: default.vue  login.vue
Frontend/src/main/kotlin/onlinejudge/app/: App.kt
Frontend/src/pages/: index.vue  login.vue  logout.vue
Frontend/src/public/: kkutu_builtin.html
Frontend/src/stores/: auth.ts
JudgeEngine/: CMakeLists.txt  build.gradle.kts  main.cpp
JudgeEngine/proto/: CMakeLists.txt
JudgeEngine/src/main/cpp/: main.cpp
JudgeEngine/src/main/headers/: test.pb.cc  test.pb.h
JudgeEngine/src/main/kotlin/onlinejudge/app/: MessageUtils.kt
JudgeEngine/src/test/kotlin/onlinejudge/app/: MessageUtilsTest.kt
protobuf/: build.gradle.kts
protobuf/cpp/: build.gradle
protobuf/src/main/proto/: auth.proto  kkutu.proto  test.proto
(+6 files in other folders)
